force-app/main/default/objects/pse__Proj__c/fields/BVS_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>BVS_Service_Package__c</fullName>
    <description>Defines the tier and scope of the project. Packages defined</description>
    <inlineHelpText>Refer to the https://docs.google.com/spreadsheets/d/1VEORmgEr9L0XnPfavC3t8wrj8kWx4YJPcgIBfdoGSwg/edit#gid=522218093 for additional details</inlineHelpText>
    <label>BVS Service Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BVS Consultation</fullName>
            </value>
            <value>
                <fullName>BVS Custom Business Case</fullName>
                <isActive>false</isActive>
                <label>BVS Custom Business Case</label>
            </value>
            <value>
                <fullName>BVS Industry ROI Only</fullName>
                <isActive>false</isActive>
                <label>BVS Industry ROI Only</label>
            </value>
            <value>
                <fullName>BVS ROI Only</fullName>
                <isActive>false</isActive>
                <label>BVS ROI Only</label>
            </value>
            <value>
                <fullName>BVS Standard Business Case</fullName>
                <isActive>false</isActive>
                <label>BVS Standard Business Case</label>
            </value>
            <value>
                <fullName>BVS Value Realization</fullName>
            </value>
            <value>
                <fullName>Full business case (Trial analysis + ROI)</fullName>
            </value>
            <value>
                <fullName>Industry ROI only (outside-in data w no customer data)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other (w free text input)</fullName>
                <isActive>false</isActive>
                <label>Other (w free text input)</label>
            </value>
            <value>
                <fullName>OTHER - Non-standard</fullName>
                <isActive>false</isActive>
                <label>OTHER - Non-standard</label>
            </value>
            <value>
                <fullName>ROI only</fullName>
            </value>
            <value>
                <fullName>Tier 1: Advanced trial - Full trial support</fullName>
                <isActive>false</isActive>
                <label>Tier 1: Advanced trial - Full trial support</label>
            </value>
            <value>
                <fullName>Tier 1: Full trial support</fullName>
                <isActive>false</isActive>
                <label>Tier 1: Full trial support</label>
            </value>
            <value>
                <fullName>Tier 1: POSTSALE - Impact &amp; realized ROI</fullName>
                <isActive>false</isActive>
                <label>Tier 1: POSTSALE - Impact &amp; realized ROI</label>
            </value>
            <value>
                <fullName>Tier 1: POSTSALE - Impact analysis</fullName>
                <isActive>false</isActive>
                <label>Tier 1: POSTSALE - Impact analysis</label>
            </value>
            <value>
                <fullName>Tier 1: POSTSALE - Realized ROI analysis</fullName>
                <isActive>false</isActive>
                <label>Tier 1: POSTSALE - Realized ROI analysis</label>
            </value>
            <value>
                <fullName>Tier 2: Final pilot readout only</fullName>
                <isActive>false</isActive>
                <label>Tier 2: Final pilot readout only</label>
            </value>
            <value>
                <fullName>Tier 2: ROI / TCO only</fullName>
                <isActive>false</isActive>
                <label>Tier 2: ROI / TCO only</label>
            </value>
            <value>
                <fullName>Tier 2: Templatized trial support</fullName>
                <isActive>false</isActive>
                <label>Tier 2: Templatized trial support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>