force-app/main/default/objects/pse__Proj__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Contact)</relationshipLabel>
    <relationshipName>Projects8</relationshipName>
    <type>Lookup</type>
</CustomField>