force-app/main/default/objects/pse__Proj__c/fields/Current_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Date__c</fullName>
    <label>Current Step Date</label>
    <type>Date</type>
</CustomField>