force-app/main/default/objects/pse__Proj__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial Support</fullName>
            </value>
            <value>
                <fullName>Services Opportunity</fullName>
                <label>SIS Integration</label>
            </value>
            <value>
                <fullName>Initial Implementation</fullName>
            </value>
            <value>
                <fullName>Upsell/Cross-sell</fullName>
            </value>
            <value>
                <fullName>Hypercare</fullName>
                <label>Adoption</label>
            </value>
            <value>
                <fullName>TSE Office Hours</fullName>
            </value>
            <value>
                <fullName>Ad Hoc</fullName>
            </value>
            <value>
                <fullName>Paid Services</fullName>
            </value>
            <value>
                <fullName>Partner Services</fullName>
            </value>
            <value>
                <fullName>BVS Engagement</fullName>
            </value>
            <value>
                <fullName>Trial Success Manager</fullName>
            </value>
            <value>
                <fullName>License Upsell</fullName>
                <isActive>false</isActive>
                <label>License Upsell</label>
            </value>
            <value>
                <fullName>New License Opportunity</fullName>
                <isActive>false</isActive>
                <label>New License Opportunity</label>
            </value>
            <value>
                <fullName>SIS</fullName>
                <isActive>false</isActive>
                <label>SIS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>