force-app/main/default/objects/pse__Proj__c/fields/FFX_Percent_Complete_Gauge__c.field-meta.xml
<CustomField>
    <fullName>FFX_Percent_Complete_Gauge__c</fullName>
    <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chxl=0:|0%||100%&amp;chxt=y&amp;chs=200x110&amp;cht=gom&amp;chd=t:&quot;+TEXT(FFX_Percent_Complete_Hours__c * 100) + &quot;&amp;chls=3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3&amp;chl=&quot;+TEXT(ROUND(FFX_Percent_Complete_Hours__c * 100,0)) +&quot;%&amp;chma=0,0,5&quot;,&quot;No Image Available&quot; ,110,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete - Time</label>
    <type>Text</type>
</CustomField>