force-app/main/default/objects/pse__Proj__c/fields/FFX_PSR_MilestoneSegment__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_MilestoneSegment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PSR Milestone Segment</label>
    <type>Checkbox</type>
</CustomField>