force-app/main/default/objects/pse__Proj__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <formula>CASESAFEID(pse__Opportunity__c)</formula>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>