force-app/main/default/objects/pse__Proj__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <inlineHelpText>Owner Role from related to opportunity</inlineHelpText>
    <label>Opportunity Owner Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>