force-app/main/default/objects/pse__Proj__c/fields/Project_Installation_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Installation_Vendor_Name__c</fullName>
    <formula>Project_Installation_Vendor__r.Name</formula>
    <label>Project Installation Vendor Name</label>
    <type>Text</type>
</CustomField>