force-app/main/default/objects/pse__Proj__c/fields/Project_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Name__c</fullName>
    <description>Formula field to display the full name (First + Last) for Accord integration. This field is read-only and mirrors the pse__Project lookup. Use this field only for reporting or integrations that require text values (e.g., Accord views). Do not use this field for relationships or assignments.</description>
    <formula>pse__Project_Manager__r.FirstName &amp; &quot; &quot; &amp; pse__Project_Manager__r.LastName</formula>
    <label>Project Manager Name</label>
    <type>Text</type>
</CustomField>