force-app/main/default/objects/pse__Proj__c/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <description>https://samsaradev.atlassian.net/browse/GTMS-10465</description>
    <label>Project Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>