force-app/main/default/objects/pse__Proj__c/fields/Project_POC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_POC_Last_Name__c</fullName>
    <label>Project POC Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>