force-app/main/default/objects/pse__Proj__c/fields/Project_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Project_POC_Phone__c</fullName>
    <description>https://samsaradev.atlassian.net/browse/GTMS-12415</description>
    <label>Project POC Phone</label>
    <type>Phone</type>
</CustomField>