force-app/main/default/objects/pse__Proj__c/fields/Project_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzzProject Point of Contact</label>
    <referenceTo>CloudingoAgent__AccountContact__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>