force-app/main/default/objects/pse__Proj__c/fields/Project_Point_of_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Project_Point_of_Contact_Phone__c</fullName>
    <formula>Project_Point_of_Contact__r.CloudingoAgent__Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zzzProject Point of Contact Phone</label>
    <type>Text</type>
</CustomField>