force-app/main/default/objects/pse__Proj__c/fields/Project_Point_of_Contact_txt__c.field-meta.xml
<CustomField>
    <fullName>Project_Point_of_Contact_txt__c</fullName>
    <description>added for GTMS-10290</description>
    <label>Project POC First Name</label>
    <type>TextArea</type>
</CustomField>