force-app/main/default/objects/pse__Proj__c/fields/psaws__Project_Manager_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>psaws__Project_Manager_Is_Current_User__c</fullName>
    <formula>pse__Project_Manager__r.pse__Salesforce_User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Manager Is Current User</label>
    <type>Checkbox</type>
</CustomField>