force-app/main/default/objects/pse__Proj__c/fields/pse__Auto_Cap_Project_Billing__c.field-meta.xml
<CustomField>
    <fullName>pse__Auto_Cap_Project_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox on a project layout that is used to stop the release of billing events that exceed the project&apos;s billing cap, if applied.</description>
    <inlineHelpText>If you have applied a billing cap to this project, select this to stop the release of billing events that exceed its value. This prevents overbilling.</inlineHelpText>
    <label>Auto-Cap Billing</label>
    <type>Checkbox</type>
</CustomField>