force-app/main/default/objects/pse__Proj__c/fields/pse__Billing_Eligible_Budgets__c.field-meta.xml
<CustomField>
    <fullName>pse__Billing_Eligible_Budgets__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
    <inlineHelpText>Number of Budgets that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
    <label>Billing Eligible Budgets</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>