force-app/main/default/objects/pse__Proj__c/fields/pse__Estimate_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimate_Approval_Status__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>The current status of this estimate in the approval process.</description>
    <inlineHelpText>The current status of this estimate in the approval process.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>