force-app/main/default/objects/pse__Proj__c/fields/pse__Percent_Discount__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The percentage to discount from the total estimated amount for the estimate.</description>
    <inlineHelpText>The percentage to discount from the total estimated amount for the estimate.</inlineHelpText>
    <label>Deprecated:Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>