force-app/main/default/objects/pse__Proj__c/fields/pse__Percentage_Used__c.field-meta.xml
<CustomField>
    <fullName>pse__Percentage_Used__c</fullName>
    <description>The percentage of bookings that are already ready-to-bill, including any pre-billed amount.</description>
    <formula>IF( OR( pse__Bookings__c = 0.00, ISBLANK( pse__Bookings__c ) , pse__Apply_Billing_Cap__c = false) , null, (pse__Billings__c + BLANKVALUE(pse__Pre_Billed__c, 0)) / pse__Bookings__c)</formula>
    <inlineHelpText>The percentage of bookings that are already ready-to-bill, including any pre-billed amount.</inlineHelpText>
    <label>Percentage Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>