force-app/main/default/objects/pse__Proj__c/fields/pse__Revenue_Forecast_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Processing_Status__c</fullName>
    <description>The processing status of this revenue forecast.</description>
    <inlineHelpText>The processing status of this revenue forecast.</inlineHelpText>
    <label>Revenue Forecast Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>