force-app/main/default/objects/pse__Proj__c/fields/pse__Total_Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Assigned_Hours__c</fullName>
    <inlineHelpText>Total number of hours assigned from the planner</inlineHelpText>
    <label>Total Assigned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>