force-app/main/default/objects/pse__Proj__c/fields/Services_Survey__c.field-meta.xml
<CustomField>
    <fullName>Services_Survey__c</fullName>
    <label>Services Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Survey Sent</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>