force-app/main/default/objects/pse__Proj__c/fields/SIS_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>SIS_Project_Status__c</fullName>
    <description>This field is populated through the PSA and Jira Integration. Users update the Jira SIS Project Status Field and update PSA SIS Project Status field</description>
    <inlineHelpText>This field matches the data in the JIRA  SIS Project Status field</inlineHelpText>
    <label>SIS Project Status</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>