force-app/main/default/objects/pse__Proj__c/recordTypes/Business_Value_Strategy.recordType-meta.xml
<RecordType>
    <fullName>Business_Value_Strategy</fullName>
    <active>true</active>
    <description>Business Value &amp; Strategy Record Type to exclusively display fields relevant to the BVS Team.</description>
    <label>Business Value &amp; Strategy</label>
</RecordType>