force-app/main/default/objects/pse__Proj__c/recordTypes/IC_Record.recordType-meta.xml
<RecordType>
    <fullName>IC_Record</fullName>
    <active>true</active>
    <description>Used for IC Team</description>
    <label>IC_Record</label>
</RecordType>