force-app/main/default/objects/pse__Proj__c/recordTypes/pse__Estimate.recordType-meta.xml
<RecordType>
    <fullName>pse__Estimate</fullName>
    <active>false</active>
    <label>Estimate</label>
</RecordType>