force-app/main/default/objects/pse__Proj__c/recordTypes/SIS_Integration.recordType-meta.xml
<RecordType>
    <fullName>SIS_Integration</fullName>
    <active>true</active>
    <description>This record type is designated for the Integration team SIS only</description>
    <label>SIS Integration</label>
</RecordType>