force-app/main/default/objects/pse__Proj__c/recordTypes/SIS_Integration_Team.recordType-meta.xml
<RecordType>
    <fullName>SIS_Integration_Team</fullName>
    <active>false</active>
    <description>This record type is designated for the Integration team</description>
    <label>SIS Integration Team</label>
</RecordType>