force-app/main/default/objects/pse__Proj__c/recordTypes/Trial_Success_Manager.recordType-meta.xml
<RecordType>
    <fullName>Trial_Success_Manager</fullName>
    <active>true</active>
    <description>Trial Success Manager Record Type to exclusively display fields relevant to the TSM Team.</description>
    <label>Trial Success Manager</label>
</RecordType>