force-app/main/default/objects/pse__Proj__c/validationRules/Admin_Template_Opportunity_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Template_Opportunity_Override</fullName>
    <active>false</active>
    <description>Use this to overrite admin requirements for updating templates</description>
    <errorConditionFormula>AND(
   ISBLANK(pse__Opportunity__c),
   $User.Id &lt;&gt; &quot;0054p000003E2DGAA0&quot;
)</errorConditionFormula>
    <errorMessage>Please see system admin</errorMessage>
</ValidationRule>